--- a/config/immune.config
+++ b/config/immune.config
@@ -1,6 +1,9 @@
 {
         "input_base_dir": "/oak/stanford/groups/smontgom/amarder/LDSC_pipeline/gwas/",
         "output_base_dir": "/oak/stanford/groups/smontgom/amarder/LDSC_pipeline/gwas/munge/",
+        "HEADDIR": "/oak/stanford/groups/smontgom/amarder/HarmonizeGWAS",
+		"TMPDIR" = "/oak/stanford/groups/smontgom/amarder/tmp",
+		"path_to_dbsnp" = "/oak/stanford/groups/smontgom/amarder/data/dbsnp",
         "studies":
         [
                 {
