--- a/config/munge.config
+++ b/config/munge.config
@@ -5,6 +5,8 @@
         "HEADDIR": "/oak/stanford/groups/smontgom/amarder/HarmonizeGWAS",
         "TMPDIR": "/oak/stanford/groups/smontgom/amarder/tmp",
         "path_to_dbsnp": "/oak/stanford/groups/smontgom/amarder/data/dbsnp",
+        "hg19ToHg38chain": "/oak/stanford/groups/smontgom/amarder/bin/chain/hg19ToHg38.over.chain.gz",
+        "liftOver": "/home/amarder/micromamba/envs/kent-tools/bin/liftOver",
         "studies":
         [
                 {
