--- a/config/immune.config
+++ b/config/immune.config
@@ -4,6 +4,7 @@
         "HEADDIR": "/oak/stanford/groups/smontgom/amarder/HarmonizeGWAS",
 		"TMPDIR" = "/oak/stanford/groups/smontgom/amarder/tmp",
 		"path_to_dbsnp" = "/oak/stanford/groups/smontgom/amarder/data/dbsnp",
+        "hg19ToHg38chain": "/oak/stanford/groups/smontgom/amarder/bin/chain/hg19ToHg38.over.chain.gz",
         "studies":
         [
                 {
