--- a/config/immune.config
+++ b/config/immune.config
@@ -2,9 +2,9 @@
         "input_base_dir": "/oak/stanford/groups/smontgom/amarder/LDSC_pipeline/gwas/",
         "output_base_dir": "/oak/stanford/groups/smontgom/amarder/LDSC_pipeline/gwas/munge/",
         "HEADDIR": "/oak/stanford/groups/smontgom/amarder/HarmonizeGWAS",
-		"TMPDIR" = "/oak/stanford/groups/smontgom/amarder/tmp",
-		"path_to_dbsnp" = "/oak/stanford/groups/smontgom/amarder/data/dbsnp",
+        "TMPDIR": "/oak/stanford/groups/smontgom/amarder/tmp",
         "hg19ToHg38chain": "/oak/stanford/groups/smontgom/amarder/bin/chain/hg19ToHg38.over.chain.gz",
+        "liftOver": "/home/amarder/micromamba/envs/kent-tools/bin/liftOver",
         "studies":
         [
                 {
