--- a/config/munge.config
+++ b/config/munge.config
@@ -210,7 +210,8 @@
                         "non_effect_allele_index": "6",
                         "effect_index": "11",
                         "se_index": "12",
-                        "direction_index": "11"
+                        "direction_index": "11",
+						"NINDIV": "788989"
                 },
                 {
                         "study_info": "HotFlashStrict_LDuncan_unpub2022",
