--- a/config/munge.config
+++ b/config/munge.config
@@ -266,22 +266,23 @@
                         "source_build": "hg19"
                 },
                 {
-                        "study_info": "Lupus_Bentham_2015",
+                        "study_info": "BMI_Yengo_2018",
                         "traits":
                         {
-                                "Lupus_Bentham_2015": ["Lupus_Bentham_2015.txt.gz"] 
+                                "BMI_Yengo_2018": ["BMI_Yengo_2018.txt.gz"] 
                         },
                         "delimiter": "\t",
 						"rsid_index": "3",
                         "chr_index": "1",
                         "snp_pos_index": "2",
-                        "pvalue_index": "6",
-                        "effect_allele_index": "5",
-                        "non_effect_allele_index": "4",
+                        "pvalue_index": "9",
+                        "effect_allele_index": "4",
+                        "non_effect_allele_index": "5",
                         "effect_index": "7",
                         "se_index": "8",
                         "direction_index": "7",
-                        "source_build": "hg19"
+                        "source_build": "hg19",
+                        "freq_index": "6"
                 }
         ]
 }
