--- a/config/munge.config
+++ b/config/munge.config
@@ -39,7 +39,8 @@
                         "non_effect_allele_index": "5",
                         "or_index": "9",
                         "se_index": "10",
-                        "direction_index": "9"
+                        "direction_index": "9",
+                        "freq_index": "7"
                 },
                 {
                         "study_info": "Anorexia_nervosa_Watson_2019",
@@ -283,6 +284,25 @@
                         "direction_index": "7",
                         "source_build": "hg19",
                         "freq_index": "6"
+                },
+                {
+                		"study_info": "Schizophrenia_PGCWave3_2022",
+                        "traits":
+                        {
+                                "Schizophrenia_PGCWave3_2022": ["Schizophrenia_PGCWave3_2022.txt.gz"] 
+                        },
+                        "delimiter": "\t",
+						"rsid_index": "2",
+                        "chr_index": "1",
+                        "snp_pos_index": "3",
+                        "pvalue_index": "11",
+                        "effect_allele_index": "5",
+                        "non_effect_allele_index": "4",
+                        "effect_index": "9",
+                        "se_index": "10",
+                        "direction_index": "9",
+                        "source_build": "hg19",
+                        "freq_index": "7"
                 }
         ]
 }
