--- a/config/munge.config
+++ b/config/munge.config
@@ -303,6 +303,25 @@
                         "direction_index": "9",
                         "source_build": "hg19",
                         "freq_index": "7"
+                },
+                {
+                		"study_info": "CRC",
+                        "traits":
+                        {
+                                "CRC": ["CRC.txt.gz"] 
+                        },
+                        "delimiter": "\t",
+						"rsid_index": "2",
+                        "chr_index": "11",
+                        "pos_index": "12",
+                        "pvalue_index": "8",
+                        "effect_allele_index": "1",
+                        "non_effect_allele_index": "2",
+                        "effect_index": "6",
+                        "se_index": "7",
+                        "direction_index": "6",
+                        "source_build": "hg19",
+                        "freq_index": "10"
                 }
         ]
 }
