--- a/config/munge.config
+++ b/config/munge.config
@@ -312,7 +312,7 @@
                         },
                         "delimiter": "\t",
                         "chr_index": "11",
-                        "pos_index": "12",
+                        "snp_pos_index": "12",
                         "pvalue_index": "8",
                         "effect_allele_index": "3",
                         "non_effect_allele_index": "2",
