--- a/config/munge2.config
+++ b/config/munge2.config
@@ -239,6 +239,24 @@
                         "se_index": "31",
                         "direction_index": "25",
                         "source_build": "hg19"
+                },
+                {
+                        "study_info": "CAD_Tcheandjieu_2022",
+                        "traits":
+                        {
+                                "CAD_Tcheandjieu_2022": ["CAD_Tcheandjieu_2022.txt.gz"] 
+                        },
+                        "delimiter": "\t",
+						"rsid_index": "3",
+                        "chr_index": "1",
+                        "snp_pos_index": "2",
+                        "log_pvalue_index": "6",
+                        "effect_allele_index": "4",
+                        "non_effect_allele_index": "3",
+                        "effect_index": "25",
+                        "se_index": "31",
+                        "direction_index": "25",
+                        "source_build": "hg19"
                 }
         ]
 }
