--- a/config/munge2.config
+++ b/config/munge2.config
@@ -250,13 +250,14 @@
 						"rsid_index": "3",
                         "chr_index": "1",
                         "snp_pos_index": "2",
-                        "log_pvalue_index": "6",
-                        "effect_allele_index": "4",
-                        "non_effect_allele_index": "3",
-                        "effect_index": "25",
-                        "se_index": "31",
-                        "direction_index": "25",
-                        "source_build": "hg19"
+                        "neg_log_pvalue_index": "6",
+                        "effect_allele_index": "5",
+                        "non_effect_allele_index": "4",
+                        "effect_index": "7",
+                        "se_index": "8",
+                        "direction_index": "7",
+                        "source_build": "hg19",
+                        "freq_index": "9"
                 }
         ]
 }
