--- a/config/munge2.config
+++ b/config/munge2.config
@@ -258,6 +258,25 @@
                         "direction_index": "7",
                         "source_build": "hg19",
                         "freq_index": "9"
+                },
+                {
+                        "study_info": "CAD_Aragam_2022",
+                        "traits":
+                        {
+                                "CAD_Aragam_2022": ["CAD_Aragam_2022.txt.gz"] 
+                        },
+                        "delimiter": "\t",
+						"rsid_index": "3",
+                        "chr_index": "1",
+                        "snp_pos_index": "2",
+                        "neg_log_pvalue_index": "6",
+                        "effect_allele_index": "5",
+                        "non_effect_allele_index": "4",
+                        "effect_index": "7",
+                        "se_index": "8",
+                        "direction_index": "7",
+                        "source_build": "hg19",
+                        "freq_index": "9"
                 }
         ]
 }
