--- a/config/munge2.config
+++ b/config/munge2.config
@@ -266,17 +266,16 @@
                                 "CAD_Aragam_2022": ["CAD_Aragam_2022.txt.gz"] 
                         },
                         "delimiter": "\t",
-						"rsid_index": "3",
                         "chr_index": "1",
                         "snp_pos_index": "2",
-                        "neg_log_pvalue_index": "6",
-                        "effect_allele_index": "5",
-                        "non_effect_allele_index": "4",
-                        "effect_index": "7",
-                        "se_index": "8",
-                        "direction_index": "7",
-                        "source_build": "hg19",
-                        "freq_index": "9"
+                        "effect_allele_index": "4",
+                        "non_effect_allele_index": "3",
+                        "effect_index": "5",
+                        "se_index": "6",
+                        "pvalue_index": "8",
+                        "direction_index": "5",
+                        "source_build": "hg38",
+                        "freq_index": "7"
                 }
         ]
 }
