--- a/config/munge2.config
+++ b/config/munge2.config
@@ -266,6 +266,7 @@
                                 "CAD_Aragam_2022": ["CAD_Aragam_2022.txt.gz"] 
                         },
                         "delimiter": "\t",
+						"rsid_index": "26",
                         "chr_index": "1",
                         "snp_pos_index": "2",
                         "effect_allele_index": "4",
